--- a/esdoc/file/js/object.js.html
+++ b/esdoc/file/js/object.js.html
@@ -348,8 +348,8 @@ export class Menu {
 	constructor(sentenceContainer) {
 		this._sentenceContainer = sentenceContainer;
 		this._fontSizeInputElem = document.getElementById(&apos;fontsize_input&apos;);
-		this._confStrLenElem = document.getElementById(&apos;conf-str-len&apos;);
-		this._confRowLenElem = document.getElementById(&apos;conf-row-len&apos;);
+		this._confStrLenElem = document.getElementById(&apos;conf_str_len&apos;);
+		this._confRowLenElem = document.getElementById(&apos;conf_row_len&apos;);
 		this.addEventListeners();
 	}
 
@@ -626,7 +626,7 @@ export class Menu {
 		const eAligns = document.querySelectorAll(&apos;#align_btns button&apos;);
 		for (let i = 0,eAlign; eAlign = eAligns[i]; i++) {
 			eAlign.addEventListener(&apos;click&apos;,function (e) {
-				const align = eAlign.id.match(/text-btn-(\S+)/);
+				const align = eAlign.id.match(/text_btn_(\S+)/);
 				this.align(align[1]);
 			}.bind(this),false);
 		}
@@ -657,13 +657,13 @@ export class Menu {
 	 * @return {Menu} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
 	 */
 	addConfigueEvent() {
-		document.getElementById(&apos;btn-conf-save&apos;).addEventListener(&apos;click&apos;,function (e) {
+		document.getElementById(&apos;btn_conf_save&apos;).addEventListener(&apos;click&apos;,function (e) {
 			const strLen = parseInt(this.confStrLenElem().value || 18);
 			const rowLen = parseInt(this.confRowLenElem().value || 40);
 			this.sentenceContainer().strLenOnRow(strLen).rowLenOnPage(rowLen);
-			$(&apos;#configue-modal&apos;).modal(&apos;hide&apos;);
+			$(&apos;#configue_modal&apos;).modal(&apos;hide&apos;);
 		}.bind(this),false);
-		document.getElementById(&apos;btn-conf-reset&apos;).addEventListener(&apos;click&apos;,function (e) { // html&#x4E0A;&#x3067;type=&quot;reset&quot;&#x306B;&#x3059;&#x308B;&#x3068;&#x3001;&#x5143;&#x306B;&#x623B;&#x3059;&#x3068;&#x3044;&#x3046;&#x3088;&#x308A;input&#x3092;&#x7A7A;&#x306B;&#x3057;&#x3066;&#x3057;&#x307E;&#x3046;
+		document.getElementById(&apos;btn_conf_reset&apos;).addEventListener(&apos;click&apos;,function (e) { // html&#x4E0A;&#x3067;type=&quot;reset&quot;&#x306B;&#x3059;&#x308B;&#x3068;&#x3001;&#x5143;&#x306B;&#x623B;&#x3059;&#x3068;&#x3044;&#x3046;&#x3088;&#x308A;input&#x3092;&#x7A7A;&#x306B;&#x3057;&#x3066;&#x3057;&#x307E;&#x3046;
 			this.confStrLenElem().value = this.sentenceContainer().strLenOnRow();
 			this.confRowLenElem().value = this.sentenceContainer().rowLenOnPage();
 		}.bind(this),false);
@@ -1868,11 +1868,6 @@ export class Sentence {
 	 * @return {Sentence} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
 	 */
 	emptyElem() {
-		// const children = this.elem().children;
-		// let child;
-		// while (child = children[0]) {
-		// 	this.elem().removeChild(child);
-		// }
 		for (let child of this._children) {
 			this.elem().removeChild(child.elem());
 		}
@@ -3482,7 +3477,7 @@ export class Paragraph extends Sentence {
 		if (opt_align) {
 			const oldAlign = this.className().match(/decolation-textalign-\S+/);
 			if (oldAlign) this.removeClass(oldAlign[0]);
-			if (opt_align !== &apos;left&apos;) this.addClass(&apos;decolation-textalign-&apos;+ align);
+			if (opt_align !== &apos;left&apos;) this.addClass(&apos;decolation-textalign-&apos;+ opt_align);
 		} else {
 			const oldAlign = this.className().match(/decolation-textalign-\S+/);
 			if (oldAlign) this.removeClass(oldAlign[0]);
@@ -5646,6 +5641,20 @@ export class FileList extends Sentence {
 	 */
 	appendElem(file) {
 		this.elem().appendChild(file.elem());
+		return this;
+	}
+	/**
+	 * &#x5185;&#x90E8;&#x306E;&#x30A8;&#x30EC;&#x30E1;&#x30F3;&#x30C8;&#x3092;&#x7A7A;&#x306B;&#x3059;&#x308B;
+	 * @return {Sentence} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 */
+	emptyElem() {
+		// FileList&#x306F;&#x5185;&#x90E8;&#x306E;&#x30A8;&#x30EC;&#x30E1;&#x30F3;&#x30C8;&#x304C;&#x53C2;&#x7167;&#x3068;&#x306F;&#x72EC;&#x7ACB;&#x3057;&#x3066;&#x5909;&#x52D5;&#x3059;&#x308B;&#x305F;&#x3081;&#x3001;&#x53C2;&#x7167;&#x3068;&#x3057;&#x3066;&#x4FDD;&#x6301;&#x3057;&#x3066;&#x3044;&#x308B;&#x30A8;&#x30EC;&#x30E1;&#x30F3;&#x30C8;&#x3092;&#x524A;&#x9664;&#x3059;&#x308B;&#x65B9;&#x5F0F;&#x3067;&#x306F;
+		// &#x5B58;&#x5728;&#x3057;&#x306A;&#x3044;&#x30A8;&#x30EC;&#x30E1;&#x30F3;&#x30C8;&#x3092;&#x524A;&#x9664;&#x3057;&#x3088;&#x3046;&#x3068;&#x3059;&#x308B;&#x3053;&#x3068;&#x306B;&#x306A;&#x308A;&#x30A8;&#x30E9;&#x30FC;&#x304C;&#x8D77;&#x3053;&#x308B;&#x305F;&#x3081;&#x3001;&#x30AA;&#x30FC;&#x30D0;&#x30FC;&#x30E9;&#x30A4;&#x30C9;&#x3059;&#x308B;
+		const children = this.elem().children;
+		let child;
+		while (child = children[0]) {
+			this.elem().removeChild(child);
+		}
 		return this;
 	}
 	/**
