--- a/esdoc/source.html
+++ b/esdoc/source.html
@@ -32,7 +32,8 @@
 <nav class="navigation" data-ice="nav"><div>
   <ul>
     
-  <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Char.html">Char</a></span></span></li>
+  <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~AbstractHierarchy.html">AbstractHierarchy</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Char.html">Char</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~CommandLine.html">CommandLine</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~ConvertContainer.html">ConvertContainer</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~ConvertView.html">ConvertView</a></span></span></li>
@@ -46,7 +47,6 @@
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Menu.html">Menu</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Paragraph.html">Paragraph</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Row.html">Row</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Sentence.html">Sentence</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~SentenceContainer.html">SentenceContainer</a></span></span></li>
 </ul>
 </div>
@@ -77,7 +77,8 @@
     </tr>
 <tr data-ice="file">
       <td data-ice="filePath"><span><a href="file/js/object.js.html">js/object.js</a></span></td>
-      <td data-ice="identifier" class="identifiers"><span><a href="class/js/object.js~Char.html">Char</a></span>
+      <td data-ice="identifier" class="identifiers"><span><a href="class/js/object.js~AbstractHierarchy.html">AbstractHierarchy</a></span>
+<span><a href="class/js/object.js~Char.html">Char</a></span>
 <span><a href="class/js/object.js~CommandLine.html">CommandLine</a></span>
 <span><a href="class/js/object.js~ConvertContainer.html">ConvertContainer</a></span>
 <span><a href="class/js/object.js~ConvertView.html">ConvertView</a></span>
@@ -91,12 +92,11 @@
 <span><a href="class/js/object.js~Menu.html">Menu</a></span>
 <span><a href="class/js/object.js~Paragraph.html">Paragraph</a></span>
 <span><a href="class/js/object.js~Row.html">Row</a></span>
-<span><a href="class/js/object.js~Sentence.html">Sentence</a></span>
 <span><a href="class/js/object.js~SentenceContainer.html">SentenceContainer</a></span></td>
       <td class="coverage"><span data-ice="coverage">100 %</span><span data-ice="coverageCount" class="coverage-count">454/454</span></td>
-      <td style="display: none;" data-ice="size">223080 byte</td>
+      <td style="display: none;" data-ice="size">223537 byte</td>
       <td style="display: none;" data-ice="lines">6933</td>
-      <td style="display: none;" data-ice="updated">2016-09-07 08:01:43 (UTC)</td>
+      <td style="display: none;" data-ice="updated">2016-09-03 05:57:07 (UTC)</td>
     </tr>
 </tbody>
 </table>
