--- a/esdoc/class/js/object.js~Menu.html
+++ b/esdoc/class/js/object.js~Menu.html
@@ -32,7 +32,8 @@
 <nav class="navigation" data-ice="nav"><div>
   <ul>
     
-  <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Char.html">Char</a></span></span></li>
+  <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~AbstractHierarchy.html">AbstractHierarchy</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Char.html">Char</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~CommandLine.html">CommandLine</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~ConvertContainer.html">ConvertContainer</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~ConvertView.html">ConvertView</a></span></span></li>
@@ -46,7 +47,6 @@
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Menu.html">Menu</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Paragraph.html">Paragraph</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Row.html">Row</a></span></span></li>
-<li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Sentence.html">Sentence</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~SentenceContainer.html">SentenceContainer</a></span></span></li>
 </ul>
 </div>
@@ -255,7 +255,7 @@
         <div data-ice="description"><p>&#x30E1;&#x30CB;&#x30E5;&#x30FC;&#x306E;&#x5404;&#x30B3;&#x30F3;&#x30DD;&#x30FC;&#x30CD;&#x30F3;&#x30C8;&#x306B;&#x30A4;&#x30D9;&#x30F3;&#x30C8;&#x30EA;&#x30B9;&#x30CA;&#x30FC;&#x3092;&#x4ED8;&#x52A0;&#x3059;&#x308B;
     new&#x30DC;&#x30BF;&#x30F3;&#x3001;save&#x30DC;&#x30BF;&#x30F3;&#x3001;delete&#x30DC;&#x30BF;&#x30F3;&#x3001;&#x958B;&#x304F;&#x30DC;&#x30BF;&#x30F3;&#x3001;&#x30E2;&#x30FC;&#x30C0;&#x30EB;&#x306E;&#x958B;&#x9589;&#x3001;
     &#x6587;&#x5B57;&#x8272;&#x30DC;&#x30BF;&#x30F3;&#x3001;&#x6587;&#x5B57;&#x8272;&#x30C9;&#x30ED;&#x30C3;&#x30D7;&#x30C0;&#x30A6;&#x30F3;&#x3001;&#x592A;&#x5B57;&#x30DC;&#x30BF;&#x30F3;&#x3001;&#x659C;&#x4F53;&#x30DC;&#x30BF;&#x30F3;&#x3001;
-     text-align&#x30DC;&#x30BF;&#x30F3;&#x3001;&#x30D5;&#x30A9;&#x30F3;&#x30C8;&#x30B5;&#x30A4;&#x30BA;&#x306E;&#x30C9;&#x30ED;&#x30C3;&#x30D7;&#x30C0;&#x30A6;&#x30F3;</p>
+     text-align&#x30DC;&#x30BF;&#x30F3;&#x3001;&#x30D5;&#x30A9;&#x30F3;&#x30C8;&#x30B5;&#x30A4;&#x30BA;&#x306E;&#x30C9;&#x30ED;&#x30C3;&#x30D7;&#x30C0;&#x30A6;&#x30F3;&#x3001;&#x8A2D;&#x5B9A;&#x30E2;&#x30FC;&#x30C0;&#x30EB;</p>
 </div>
       </div>
     </td>
@@ -948,7 +948,7 @@
   <div data-ice="description"><p>&#x30E1;&#x30CB;&#x30E5;&#x30FC;&#x306E;&#x5404;&#x30B3;&#x30F3;&#x30DD;&#x30FC;&#x30CD;&#x30F3;&#x30C8;&#x306B;&#x30A4;&#x30D9;&#x30F3;&#x30C8;&#x30EA;&#x30B9;&#x30CA;&#x30FC;&#x3092;&#x4ED8;&#x52A0;&#x3059;&#x308B;
     new&#x30DC;&#x30BF;&#x30F3;&#x3001;save&#x30DC;&#x30BF;&#x30F3;&#x3001;delete&#x30DC;&#x30BF;&#x30F3;&#x3001;&#x958B;&#x304F;&#x30DC;&#x30BF;&#x30F3;&#x3001;&#x30E2;&#x30FC;&#x30C0;&#x30EB;&#x306E;&#x958B;&#x9589;&#x3001;
     &#x6587;&#x5B57;&#x8272;&#x30DC;&#x30BF;&#x30F3;&#x3001;&#x6587;&#x5B57;&#x8272;&#x30C9;&#x30ED;&#x30C3;&#x30D7;&#x30C0;&#x30A6;&#x30F3;&#x3001;&#x592A;&#x5B57;&#x30DC;&#x30BF;&#x30F3;&#x3001;&#x659C;&#x4F53;&#x30DC;&#x30BF;&#x30F3;&#x3001;
-     text-align&#x30DC;&#x30BF;&#x30F3;&#x3001;&#x30D5;&#x30A9;&#x30F3;&#x30C8;&#x30B5;&#x30A4;&#x30BA;&#x306E;&#x30C9;&#x30ED;&#x30C3;&#x30D7;&#x30C0;&#x30A6;&#x30F3;</p>
+     text-align&#x30DC;&#x30BF;&#x30F3;&#x3001;&#x30D5;&#x30A9;&#x30F3;&#x30C8;&#x30B5;&#x30A4;&#x30BA;&#x306E;&#x30C9;&#x30ED;&#x30C3;&#x30D7;&#x30C0;&#x30A6;&#x30F3;&#x3001;&#x8A2D;&#x5B9A;&#x30E2;&#x30FC;&#x30C0;&#x30EB;</p>
 </div>
 
   
