--- a/esdoc/class/js/object.js~Menu.html
+++ b/esdoc/class/js/object.js~Menu.html
@@ -413,7 +413,7 @@
         
         
         <div data-ice="description"><p>&#x6587;&#x5B57;&#x8272;&#x30DC;&#x30BF;&#x30F3;&#x306B;&#x8272;&#x3092;&#x4ED8;&#x3051;&#x308B;
-&#x5F15;&#x6570;&#x3092;&#x7701;&#x7565;&#x3059;&#x308B;&#x3068;&#x73FE;&#x5728;&#x306E;&#x8272;&#x3092;&#x53D6;&#x5F97;</p>
+    &#x5F15;&#x6570;&#x3092;&#x7701;&#x7565;&#x3059;&#x308B;&#x3068;&#x73FE;&#x5728;&#x306E;&#x8272;&#x3092;&#x53D6;&#x5F97;</p>
 </div>
       </div>
     </td>
@@ -1207,8 +1207,8 @@
     <tr data-ice="property" data-depth="0">
       <td data-ice="name" data-depth="0">opt_bl</td>
       <td data-ice="type"><span><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean">boolean</a></span></td>
-      <td data-ice="appendix"></td>
-      <td data-ice="description"><p>true&#x3067;&#x592A;&#x5B57;&#x30DC;&#x30BF;&#x30F3;&#x3092;&#x30AA;&#x30F3;&#x306B;&#x3059;&#x308B;&#x3002;false&#x3067;&#x30AA;&#x30D5;&#x306B;&#x3059;&#x308B;&#x3002;&#x7701;&#x7565;&#x53EF;</p>
+      <td data-ice="appendix"><ul><li>optional</li></ul></td>
+      <td data-ice="description"><p>true&#x3067;&#x592A;&#x5B57;&#x30DC;&#x30BF;&#x30F3;&#x3092;&#x30AA;&#x30F3;&#x306B;&#x3059;&#x308B;&#x3002;false&#x3067;&#x30AA;&#x30D5;&#x306B;&#x3059;&#x308B;</p>
 </td>
     </tr>
 </tbody>
@@ -1313,7 +1313,7 @@
   
   
   <div data-ice="description"><p>&#x6587;&#x5B57;&#x8272;&#x30DC;&#x30BF;&#x30F3;&#x306B;&#x8272;&#x3092;&#x4ED8;&#x3051;&#x308B;
-&#x5F15;&#x6570;&#x3092;&#x7701;&#x7565;&#x3059;&#x308B;&#x3068;&#x73FE;&#x5728;&#x306E;&#x8272;&#x3092;&#x53D6;&#x5F97;</p>
+    &#x5F15;&#x6570;&#x3092;&#x7701;&#x7565;&#x3059;&#x308B;&#x3068;&#x73FE;&#x5728;&#x306E;&#x8272;&#x3092;&#x53D6;&#x5F97;</p>
 </div>
 
   
@@ -1329,8 +1329,8 @@
     <tr data-ice="property" data-depth="0">
       <td data-ice="name" data-depth="0">opt_color</td>
       <td data-ice="type"><span><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String">string</a></span></td>
-      <td data-ice="appendix"></td>
-      <td data-ice="description"><p>&#x6587;&#x5B57;&#x8272;&#x30DC;&#x30BF;&#x30F3;&#x306B;&#x3064;&#x3051;&#x308B;&#x8272;&#x306E;&#x540D;&#x524D;&#x3002;&#x7701;&#x7565;&#x53EF;</p>
+      <td data-ice="appendix"><ul><li>optional</li></ul></td>
+      <td data-ice="description"><p>&#x6587;&#x5B57;&#x8272;&#x30DC;&#x30BF;&#x30F3;&#x306B;&#x3064;&#x3051;&#x308B;&#x8272;&#x306E;&#x540D;&#x524D;</p>
 </td>
     </tr>
 </tbody>
@@ -1623,8 +1623,8 @@
     <tr data-ice="property" data-depth="0">
       <td data-ice="name" data-depth="0">opt_newSize</td>
       <td data-ice="type"><span>number string</span></td>
-      <td data-ice="appendix"></td>
-      <td data-ice="description"><p>input&#x306B;&#x8A2D;&#x5B9A;&#x3059;&#x308B;&#x5024;(&#x6570;&#x5024;&#x304B;&#x3001;&#x6587;&#x5B57;&#x5217;&#x306E;&apos;auto&apos;)&#x3002;&#x7701;&#x7565;&#x53EF;</p>
+      <td data-ice="appendix"><ul><li>optional</li></ul></td>
+      <td data-ice="description"><p>input&#x306B;&#x8A2D;&#x5B9A;&#x3059;&#x308B;&#x5024;(&#x6570;&#x5024;&#x304B;&#x3001;&#x6587;&#x5B57;&#x5217;&#x306E;&apos;auto&apos;)</p>
 </td>
     </tr>
 </tbody>
@@ -1637,7 +1637,7 @@
     <table>
       <tr>
         <td class="return-type" data-ice="returnType"><span>Menu number string</span></td>
-        <td class="return-desc" data-ice="returnDescription"><p>&#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;(&#x5F15;&#x6570;&#x3092;&#x6E21;&#x3057;&#x305F;&#x5834;&#x5408;)&#x3001;&#x3042;&#x308B;&#x3044;&#x306F;&#x73FE;&#x5728;&#x306E;input&#x30D5;&#x30A9;&#x30FC;&#x30E0;&#x306E;&#x5024;(&#x5F15;&#x6570;&#x3092;&#x7701;&#x7565;&#x3057;&#x305F;&#x5834;&#x5408;&#x3002;&apos;auto&apos;&#x306E;&#x307F;&#x6587;&#x5B57;&#x5217;&#x3067;&#x8FD4;&#x3059;)</p>
+        <td class="return-desc" data-ice="returnDescription"><p>&#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;(&#x5F15;&#x6570;&#x3092;&#x6E21;&#x3057;&#x305F;&#x5834;&#x5408;)&#x3001;&#x3042;&#x308B;&#x3044;&#x306F;&#x73FE;&#x5728;&#x306E;input&#x30D5;&#x30A9;&#x30FC;&#x30E0;&#x306E;&#x5024;(&#x5F15;&#x6570;&#x3092;&#x7701;&#x7565;&#x3057;&#x305F;&#x5834;&#x5408;&#x3002;&apos;auto&apos;&#x306E;&#x5834;&#x5408;&#x306F;&#x6587;&#x5B57;&#x5217;&#x3067;&#x8FD4;&#x3059;)</p>
 </td>
       </tr>
     </table>
@@ -1761,8 +1761,8 @@
     <tr data-ice="property" data-depth="0">
       <td data-ice="name" data-depth="0">opt_bl</td>
       <td data-ice="type"><span><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean">boolean</a></span></td>
-      <td data-ice="appendix"></td>
-      <td data-ice="description"><p>true&#x3067;&#x592A;&#x5B57;&#x30DC;&#x30BF;&#x30F3;&#x3092;&#x30AA;&#x30F3;&#x306B;&#x3059;&#x308B;&#x3002;false&#x3067;&#x30AA;&#x30D5;&#x306B;&#x3059;&#x308B;&#x3002;&#x7701;&#x7565;&#x53EF;</p>
+      <td data-ice="appendix"><ul><li>optional</li></ul></td>
+      <td data-ice="description"><p>true&#x3067;&#x592A;&#x5B57;&#x30DC;&#x30BF;&#x30F3;&#x3092;&#x30AA;&#x30F3;&#x306B;&#x3059;&#x308B;&#x3002;false&#x3067;&#x30AA;&#x30D5;&#x306B;&#x3059;&#x308B;</p>
 </td>
     </tr>
 </tbody>
