--- a/esdoc/file/js/object.js.html
+++ b/esdoc/file/js/object.js.html
@@ -48,6 +48,7 @@
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Paragraph.html">Paragraph</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Row.html">Row</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~SentenceContainer.html">SentenceContainer</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-variable">V</span><span data-ice="name"><span><a href="variable/index.html#static-variable-Util">Util</a></span></span></li>
 </ul>
 </div>
 </nav>
@@ -62,8 +63,13 @@
  *	jQyery&#x306E;&#x4F7F;&#x7528;&#x7B87;&#x6240;:width(),height(),addwheelEventlistener(),removeWheelEventListener(),bootstrap&#x95A2;&#x4FC2;
  */
 console.log(&apos;object.js&apos;);
-const Util = {
-	// baseArray&#x3092;cnt&#x500B;&#x305A;&#x3064;&#x306E;&#x914D;&#x5217;&#x306B;&#x5206;&#x5272;&#x3059;&#x308B;
+/**
+ * @namespace
+ */
+export const Util = {
+	/**
+	 * baseArray&#x3092;cnt&#x500B;&#x305A;&#x3064;&#x306E;&#x914D;&#x5217;&#x306B;&#x5206;&#x5272;&#x3059;&#x308B;
+	 */
 	splitArray:function(baseArray,cnt) {
 		&apos;use strict&apos;;
 		const b = baseArray.length;
@@ -118,6 +124,9 @@ const Util = {
 	}
 };
 // closer
+/**
+ * @memberof Util
+ */
 Util.createCharElement = (function () {
 	const eCharTemplate = document.createElement(&apos;span&apos;);
 	eCharTemplate.classList.add(&apos;char&apos;);
@@ -4134,6 +4143,7 @@ export class ConvertContainer extends AbstractHierarchy {
 	 * &#x6F22;&#x5B57;&#x5909;&#x63DB;&#x3092;&#x59CB;&#x3081;&#x308B;(&#x975E;&#x540C;&#x671F;&#x901A;&#x4FE1;)
 	 * @param {string} str &#x5909;&#x63DB;&#x3059;&#x308B;&#x6587;&#x5B57;&#x5217;
 	 * @return {ConvertContainer} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/KanjiProxy.html
 	 */
 	convert(str) {
 		Util.post(&quot;/tategaki/KanjiProxy&quot;,{
@@ -4158,6 +4168,7 @@ export class ConvertContainer extends AbstractHierarchy {
 	/**
 	 * &#x6587;&#x7BC0;&#x533A;&#x5207;&#x308A;&#x3092;&#x3072;&#x3068;&#x3064;&#x524D;&#x306B;&#x305A;&#x3089;&#x3057;&#x3066;&#x5909;&#x63DB;&#x3057;&#x76F4;&#x3059;(&#x975E;&#x540C;&#x671F;&#x901A;&#x4FE1;)
 	 * @return {ConvertContainer} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/KanjiProxy.html
 	 */
 	shiftUp() {
 		const activeView = this.activeView();
@@ -4200,6 +4211,7 @@ export class ConvertContainer extends AbstractHierarchy {
 	/**
 	 * &#x6587;&#x7BC0;&#x533A;&#x5207;&#x308A;&#x3092;&#x3072;&#x3068;&#x3064;&#x4E0B;&#x306B;&#x305A;&#x3089;&#x3057;&#x3066;&#x5909;&#x63DB;&#x3057;&#x76F4;&#x3059;(&#x975E;&#x540C;&#x671F;&#x901A;&#x4FE1;)
 	 * @return {ConvertContainer} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/KanjiProxy.html
 	 */
 	shiftDown() {
 		const activeView = this.activeView();
@@ -4244,6 +4256,7 @@ export class ConvertContainer extends AbstractHierarchy {
 	/**
 	 * &#x5165;&#x529B;&#x5143;&#x306E;&#x6587;&#x5B57;&#x304C;&#x3072;&#x3089;&#x304C;&#x306A;&#x306B;&#x3057;&#x3066;&#xFF11;&#x6587;&#x5B57;&#x3057;&#x304B;&#x306A;&#x3051;&#x308C;&#x3070;&#x5168;&#x3066;&#x7834;&#x68C4;&#x3057;&#x3066;&#x5165;&#x529B;&#x3092;&#x7D42;&#x4E86;&#x3059;&#x308B;&#x3002;&#x4E8C;&#x6587;&#x5B57;&#x4EE5;&#x4E0A;&#x3042;&#x308C;&#x3070;&#x6700;&#x5F8C;&#x306E;&#xFF11;&#x97F3;&#x306E;&#x307F;&#x524A;&#x9664;&#x3057;&#x3066;&#x9078;&#x629E;&#x6587;&#x7BC0;&#x3092;&#x5909;&#x63DB;&#x3057;&#x76F4;&#x3059;(&#x975E;&#x540C;&#x671F;&#x901A;&#x4FE1;)
 	 * @return {ConvertContainer} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/KanjiProxy.html
 	 */
 	backSpace() {
 		const activeView = this.activeView();
@@ -4439,7 +4452,7 @@ export class InputChar extends Char {
 	// --Status
 
 	/**
-	 * &#x3053;&#x306E;&#x6587;&#x5B57;&#x306E;&#x6587;&#x7BC0;&#x756A;&#x53F7;&#x3092;newNum&#x306B;&#x8A2D;&#x5B9A;&#x3059;&#x308B;&#x3001;&#x3042;&#x308B;&#x3044;&#x306F;&#x5F15;&#x6570;&#x7701;&#x7565;&#x3067;&#x73FE;&#x5728;&#x306E;&#x6587;&#x7BC0;&#x756A;&#x53F7;&#x3092;&#x53D6;&#x5F97;&#x3059;&#x308B;
+	 * &#x3053;&#x306E;&#x6587;&#x5B57;&#x306E;&#x6587;&#x7BC0;&#x756A;&#x53F7;&#x3092;opt_newNum&#x306B;&#x8A2D;&#x5B9A;&#x3059;&#x308B;&#x3001;&#x3042;&#x308B;&#x3044;&#x306F;&#x5F15;&#x6570;&#x7701;&#x7565;&#x3067;&#x73FE;&#x5728;&#x306E;&#x6587;&#x7BC0;&#x756A;&#x53F7;&#x3092;&#x53D6;&#x5F97;&#x3059;&#x308B;
 	 * @param {number} [opt_newNum] &#x65B0;&#x305F;&#x306B;&#x8A2D;&#x5B9A;&#x3059;&#x308B;&#x6587;&#x7BC0;&#x756A;&#x53F7;(&#xFF10;&#x59CB;&#x307E;&#x308A;)
 	 * @return {InputChar number} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;(&#x5F15;&#x6570;&#x3092;&#x6E21;&#x3057;&#x305F;&#x5834;&#x5408;)&#x3001;&#x3042;&#x308B;&#x3044;&#x306F;&#x73FE;&#x5728;&#x306E;&#x6587;&#x7BC0;&#x306E;&#x30A4;&#x30F3;&#x30C7;&#x30C3;&#x30AF;&#x30B9;(&#x5F15;&#x6570;&#x3092;&#x7701;&#x7565;&#x3057;&#x305F;&#x5834;&#x5408;)
 	 */
@@ -4743,8 +4756,9 @@ export class InputBuffer extends Row {
 		return this;
 	}
 	/**
-	 * &#x5165;&#x529B;&#x6587;&#x5B57;&#x3059;&#x3079;&#x3066;&#x3092;&#x6F22;&#x5B57;&#x5909;&#x63DB;&#x3059;&#x308B;
+	 * &#x5165;&#x529B;&#x6587;&#x5B57;&#x3059;&#x3079;&#x3066;&#x3092;&#x6F22;&#x5B57;&#x5909;&#x63DB;&#x3059;&#x308B;(&#x975E;&#x540C;&#x671F;&#x901A;&#x4FE1;)
 	 * @return {InputBuffer} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/KanjiProxy.html
 	 */
 	convert() {
 		this.convertContainer().convert(this.text());
@@ -5090,6 +5104,7 @@ export class File extends AbstractHierarchy {
 	/**
 	 * &#x81EA;&#x8EAB;&#x306E;&#x8981;&#x7D20;&#x53CA;&#x3073;&#x81EA;&#x8EAB;&#x3078;&#x306E;&#x53C2;&#x7167;&#x3092;&#x524A;&#x9664;&#x3057;&#x3001;&#x81EA;&#x8EAB;&#x304C;&#x8868;&#x3059;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x3092;&#x524A;&#x9664;&#x3059;&#x308B;(&#x975E;&#x540C;&#x671F;&#x901A;&#x4FE1;)
 	 * @return {File} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/DeleteFile.html
 	 */
 	delete() {
 		Util.post(&apos;/tategaki/DeleteFile&apos;,{
@@ -5121,6 +5136,7 @@ export class File extends AbstractHierarchy {
 	 * &#x81EA;&#x8EAB;&#x3092;newParentDir&#x306E;&#x4E2D;&#x306B;&#x79FB;&#x52D5;&#x3057;&#x3001;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x30EA;&#x30B9;&#x30C8;&#x3092;&#x4F5C;&#x308A;&#x76F4;&#x3059;(&#x975E;&#x540C;&#x671F;&#x901A;&#x4FE1;)
 	 * @param {Directory} newParentDir &#x81EA;&#x8EAB;&#x306E;&#x89AA;&#x3068;&#x306A;&#x308B;&#x30C7;&#x30A3;&#x30EC;&#x30AF;&#x30C8;&#x30EA;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
 	 * @return {File} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/MoveFile.html
 	 */
 	move(newParentDir) {
 		const fileList = this.fileList();
@@ -5327,6 +5343,7 @@ export class Directory extends AbstractHierarchy {
 	 * &#x81EA;&#x8EAB;&#x3092;&#x524A;&#x9664;&#x3059;&#x308B;(&#x975E;&#x540C;&#x671F;&#x901A;&#x4FE1;)
 	 * @param {boolean} [opt_bl=false] &#x81EA;&#x8EAB;&#x306E;&#x5185;&#x90E8;&#x306B;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x304C;&#x3042;&#x308B;&#x3068;&#x304D;&#x3001;&#x5F37;&#x5236;&#x7684;&#x306B;&#x4E2D;&#x306E;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x3054;&#x3068;&#x524A;&#x9664;&#x3059;&#x308B;&#x306A;&#x3089;true&#x3001;&#x305D;&#x3046;&#x3067;&#x306A;&#x3051;&#x308C;&#x3070;false&#x3092;&#x6307;&#x5B9A;&#x3059;&#x308B;
 	 * @return {Directory} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/DeleteDirectory.html
 	 */
 	delete(opt_bl) {
 		const bl = opt_bl || false; // &#x5F15;&#x6570;&#x7701;&#x7565;&#x306E;&#x5834;&#x5408;&#x3067;&#x3082;&#x3001;&#x660E;&#x78BA;&#x306B;false&#x3092;&#x5165;&#x308C;&#x308B;
@@ -5691,6 +5708,7 @@ export class FileList extends AbstractHierarchy {
 	/**
 	 * &#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x30EA;&#x30B9;&#x30C8;&#x3092;&#x30B5;&#x30FC;&#x30D0;&#x30FC;&#x304B;&#x3089;&#x8AAD;&#x307F;&#x8FBC;&#x307F;&#x3001;&#x5404;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;&#x3092;&#x69CB;&#x7BC9;&#x3057;&#x76F4;&#x3059;(&#x975E;&#x540C;&#x671F;&#x901A;&#x4FE1;)
 	 * @return {FileList} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/FileListMaker.html
 	 */
 	read() {
 		const userId = this.sentenceContainer().userId();
@@ -5733,6 +5751,7 @@ export class FileList extends AbstractHierarchy {
 	 * &#x540D;&#x524D;&#x3067;&#x6307;&#x5B9A;&#x3055;&#x308C;&#x305F;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x3092;&#x524A;&#x9664;&#x3059;&#x308B;(&#x975E;&#x540C;&#x671F;&#x901A;&#x4FE1;)&#x3002;&#x540C;&#x540D;&#x306E;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x304C;&#x8907;&#x6570;&#x898B;&#x3064;&#x304B;&#x3063;&#x305F;&#x5834;&#x5408;&#x306F;&#x78BA;&#x8A8D;&#x3059;&#x308B;
 	 * @param {string} filename &#x524A;&#x9664;&#x3059;&#x308B;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x306E;&#x540D;&#x524D;
 	 * @return {FileList} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/DeleteFile.html
 	 */
 	deleteFile(filename) {
 		const files = this.findFile(filename);
@@ -5760,6 +5779,7 @@ export class FileList extends AbstractHierarchy {
 	 * &#x6307;&#x5B9A;&#x3055;&#x308C;&#x305F;&#x540D;&#x524D;&#x3067;&#x30C7;&#x30A3;&#x30EC;&#x30AF;&#x30C8;&#x30EA;&#x3092;&#x4F5C;&#x6210;&#x3059;&#x308B;(&#x975E;&#x540C;&#x671F;&#x901A;&#x4FE1;)
 	 * @param {string} dirname &#x65B0;&#x3057;&#x304F;&#x4F5C;&#x6210;&#x3055;&#x308C;&#x308B;&#x30C7;&#x30A3;&#x30EC;&#x30AF;&#x30C8;&#x30EA;&#x306E;&#x540D;&#x524D;
 	 * @return {FileList} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/DirectoryMaker.html
 	 */
 	mkdir(dirname) {
 		if (!dirname) return this;
@@ -5778,6 +5798,7 @@ export class FileList extends AbstractHierarchy {
 	 * @param {string} dirname &#x524A;&#x9664;&#x3059;&#x308B;&#x30C7;&#x30A3;&#x30EC;&#x30AF;&#x30C8;&#x30EA;&#x306E;&#x540D;&#x524D;
 	 * @param {boolean} isForce &#x30C7;&#x30A3;&#x30EC;&#x30AF;&#x30C8;&#x30EA;&#x5185;&#x306B;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x7B49;&#x304C;&#x3042;&#x3063;&#x3066;&#x3082;&#x5F37;&#x5236;&#x7684;&#x306B;&#x4E2D;&#x8EAB;&#x3054;&#x3068;&#x524A;&#x9664;&#x3059;&#x308B;&#x306A;&#x3089;true&#x3001;&#x305D;&#x3046;&#x3067;&#x306A;&#x3051;&#x308C;&#x3070;false
 	 * @return {FileList} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/DeleteDirectory.html
 	 */
 	deleteDirectory(dirname,isForce) {
 		const dirs = this.findDirectory(dirname);
@@ -5790,6 +5811,7 @@ export class FileList extends AbstractHierarchy {
 	 * @param {string} filename &#x79FB;&#x52D5;&#x3059;&#x308B;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x540D;&#x3002;&#x540C;&#x540D;&#x306E;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x304C;&#x898B;&#x3064;&#x304B;&#x3063;&#x305F;&#x5834;&#x5408;&#x306F;&#x3001;&#x6700;&#x521D;&#x306B;&#x898B;&#x3064;&#x304B;&#x3063;&#x305F;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x304C;&#x9078;&#x629E;&#x3055;&#x308C;&#x308B;
 	 * @param {string} dirname &#x79FB;&#x52D5;&#x5148;&#x306E;&#x30C7;&#x30A3;&#x30EC;&#x30AF;&#x30C8;&#x30EA;&#x540D;&#x3002;&#x540C;&#x540D;&#x306E;&#x30C7;&#x30A3;&#x30EC;&#x30AF;&#x30C8;&#x30EA;&#x304C;&#x898B;&#x3064;&#x304B;&#x3063;&#x305F;&#x5834;&#x5408;&#x306F;&#x3001;&#x6700;&#x521D;&#x306B;&#x898B;&#x3064;&#x304B;&#x3063;&#x305F;&#x30C7;&#x30A3;&#x30EC;&#x30AF;&#x30C8;&#x30EA;&#x304C;&#x9078;&#x629E;&#x3055;&#x308C;&#x308B;
 	 * @return {FileList} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/MoveFile.html
 	 */
 	moveFile(filename,dirname) {
 		const files = this.findFile(filename);
@@ -6512,6 +6534,7 @@ export class SentenceContainer extends AbstractHierarchy {
 	 * &#x6307;&#x5B9A;&#x3055;&#x308C;&#x305F;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x3092;&#x958B;&#x304F;(&#x975E;&#x540C;&#x671F;&#x901A;&#x4FE1;)
 	 * @param {number} fileId &#x958B;&#x304F;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x306E;ID
 	 * @return {SentenceContainer} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/ReadJsonFile.html
 	 */
 	readFile(fileId) {
 		const file = this.fileList().findFile(fileId)[0];
@@ -6521,6 +6544,7 @@ export class SentenceContainer extends AbstractHierarchy {
 	/**
 	 * &#x73FE;&#x5728;&#x958B;&#x3044;&#x3066;&#x3044;&#x308B;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x3092;&#x4E0A;&#x66F8;&#x304D;&#x4FDD;&#x5B58;&#x3059;&#x308B;&#x3002;newFile()&#x3055;&#x308C;&#x3066;&#x521D;&#x3081;&#x3066;&#x306E;&#x4FDD;&#x5B58;&#x306A;&#x3089;&#x540D;&#x524D;&#x3092;&#x3064;&#x3051;&#x3066;&#x4FDD;&#x5B58;&#x3059;&#x308B;&#x3002;(&#x3068;&#x3082;&#x306B;&#x975E;&#x540C;&#x671F;&#x901A;&#x4FE1;)
 	 * @return {SentenceContainer} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/WriteJsonFile.html
 	 */
 	saveFile() {
 		if (this.fileId() === -1) {
@@ -6544,6 +6568,8 @@ export class SentenceContainer extends AbstractHierarchy {
 	 * &#x73FE;&#x5728;&#x958B;&#x3044;&#x3066;&#x3044;&#x308B;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x3092;&#x540D;&#x524D;&#x3092;&#x3064;&#x3051;&#x3066;&#x4FDD;&#x5B58;&#x3059;&#x308B;(&#x975E;&#x540C;&#x671F;&#x901A;&#x4FE1;)
 	 * @param {string} filename &#x65B0;&#x3057;&#x3044;&#x30D5;&#x30A1;&#x30A4;&#x30EB;&#x306E;&#x540D;&#x524D;
 	 * @return {SentenceContainer} &#x81EA;&#x8EAB;&#x306E;&#x30A4;&#x30F3;&#x30B9;&#x30BF;&#x30F3;&#x30B9;
+	 * @see ../WEB-INF/classes/doc/FileMaker.html
+	 * @see ../WEB-INF/classes/doc/WriteJsonFile.html
 	 */
 	saveAsFile(filename) {
 		Util.post(&apos;/tategaki/FileMaker&apos;,{
