--- a/esdoc/source.html
+++ b/esdoc/source.html
@@ -48,11 +48,12 @@
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Paragraph.html">Paragraph</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~Row.html">Row</a></span></span></li>
 <li data-ice="doc"><span data-ice="kind" class="kind-class">C</span><span data-ice="name"><span><a href="class/js/object.js~SentenceContainer.html">SentenceContainer</a></span></span></li>
+<li data-ice="doc"><span data-ice="kind" class="kind-variable">V</span><span data-ice="name"><span><a href="variable/index.html#static-variable-Util">Util</a></span></span></li>
 </ul>
 </div>
 </nav>
 
-<div class="content" data-ice="content"><h1>Source <img data-ice="coverageBadge" src="./badge.svg"><span data-ice="totalCoverageCount" class="total-coverage-count">454/454</span></h1>
+<div class="content" data-ice="content"><h1>Source <img data-ice="coverageBadge" src="./badge.svg"><span data-ice="totalCoverageCount" class="total-coverage-count">455/455</span></h1>
 
 <table class="files-summary" data-ice="files" data-use-coverage="true">
   <thead>
@@ -92,11 +93,12 @@
 <span><a href="class/js/object.js~Menu.html">Menu</a></span>
 <span><a href="class/js/object.js~Paragraph.html">Paragraph</a></span>
 <span><a href="class/js/object.js~Row.html">Row</a></span>
-<span><a href="class/js/object.js~SentenceContainer.html">SentenceContainer</a></span></td>
-      <td class="coverage"><span data-ice="coverage">100 %</span><span data-ice="coverageCount" class="coverage-count">454/454</span></td>
-      <td style="display: none;" data-ice="size">223415 byte</td>
-      <td style="display: none;" data-ice="lines">6932</td>
-      <td style="display: none;" data-ice="updated">2016-09-05 07:00:50 (UTC)</td>
+<span><a href="class/js/object.js~SentenceContainer.html">SentenceContainer</a></span>
+<span><a href="variable/index.html#static-variable-Util">Util</a></span></td>
+      <td class="coverage"><span data-ice="coverage">100 %</span><span data-ice="coverageCount" class="coverage-count">455/455</span></td>
+      <td style="display: none;" data-ice="size">224337 byte</td>
+      <td style="display: none;" data-ice="lines">6957</td>
+      <td style="display: none;" data-ice="updated">2016-09-06 06:50:03 (UTC)</td>
     </tr>
 </tbody>
 </table>
